--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "react-query": "^3.39.3"
   }
 }
