--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.7.2",
     "formik": "^2.4.6",
     "framer-motion": "^10.12.16",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
